# mbot_objects_mapping

./: CMakeLists.txt  README.md  package.xml  setup.py
ros/config/: furniture_objects_mapping.yaml  small_objects_mapping.yaml
ros/launch/: mbot_objects_mapping.launch
ros/scripts/: mbot_objects_mapping_node
ros/src/mbot_objects_mapping_ros/: __init__.py  mbot_objects_mapping.py
